--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
     </header>
 
     <section id="selection-banner">
-        <img src="mancha.jpg" alt="mancha" width="100%" height="100%" title="imagem mancha">
+        <img src="palmeirasbanner.jpg" alt="palmeirasbanner" width="100%" height="100%" title="palmeirasbanner">
         
     </section>
 
