--- a/home.html
+++ b/home.html
@@ -26,7 +26,12 @@
 
     <section id="section-cards">
         <div class="card">
+            <div class="img-card">
 
+            </div>
+            <div class="text-card">
+
+            </div>
         </div>
 
         <div class="card">
