--- a/home.html
+++ b/home.html
@@ -27,7 +27,8 @@
     <section id="section-cards">
         <div class="card">
             <div class="img-card">
-
+                <img src="pal.jpg"
+                width="100%" height="100%" alt="" srcset="" />
             </div>
             <div class="text-card">
 
