--- a/home.html
+++ b/home.html
@@ -31,7 +31,8 @@
                 width="100%" height="100%" alt="" srcset="" />
             </div>
             <div class="text-card">
-
+                <h1 class="titulo-card">Palmeiras o maior campeão do Brasil</h1>
+                <p class="p-card">Saiba mais...</p>
             </div>
         </div>
 
