--- a/home.html
+++ b/home.html
@@ -31,8 +31,12 @@
                 width="100%" height="100%" alt="" srcset="" />
             </div>
             <div class="text-card">
+                
                 <h1 class="titulo-card">Palmeiras o maior campeão do Brasil</h1>
-                <p class="p-card">Saiba mais...</p>
+                <a href="https://www.espn.com.br/blogs/paulocobos/798120_mundial-nao-importa-palmeiras-e-o-maior-vencedor-da-historia-do-futebol-brasileiro" target="_blank" >    
+                    <p class="p-card">Saiba mais...</p>
+                </a>
+
             </div>
         </div>
 
