--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
     <header>
     <nav>
         <ul>
-            <a href="home.html"></a><li>Home</li></a>
-            <a href="contato.html"></a><li>Contato</li></a>
-            <a href="sobre.html"></a><li>Sobre</li></a>
+            <a href="home.html" target="_blank"><li>Home</li></a>
+            <a href="contato.html" target="_blank"><li>Contato</li></a>
+            <a href="sobre.html" target="_blank"><li>Sobre</li></a>
         </ul>
     </nav>
 
