--- a/home.html
+++ b/home.html
@@ -8,12 +8,14 @@
     <title>Home</title>
 </head>
 <body>
-    <header>
+    <header class="img-header">
     <nav>
         <ul>
             <a href="home.html" target="_blank"><li>Home</li></a>
             <a href="contato.html" target="_blank"><li>Contato</li></a>
             <a href="sobre.html" target="_blank"><li>Sobre</li></a>
+         
+
         </ul>
     </nav>
 
