mudei mais coisa ainda

--- a/form.html
+++ b/form.html
@@ -11,9 +11,16 @@
     <h1>Cadastro</h1>
 
     <form action="recebeDados.c">
-        nome: <input type="text" name="nome" id="">
+        nome:<input type="text" name="nome" id=""><br>
+        senha:<input type="password" name="senha" id=""><br>
+        data:<input type="datetime-local" name="data" id=""><br>
+        cor:<input type="color" name="cor" id=""><br>
 
-
+        Curso:<br>
+       
+        <input type="radio" value="CC" name="curso" id=""> CC<br>
+        <input type="radio" value="ADS" name="curso" id=""> ADS<br>
+        <input type="radio" value="ES" name="curso" id=""> ES<br>
 
 
 
