--- a/form.html
+++ b/form.html
@@ -22,6 +22,17 @@
         <input type="radio" value="ADS" name="curso" id=""> ADS<br>
         <input type="radio" value="ES" name="curso" id=""> ES<br>
 
+        <input type="checkbox" value="APE" name="APE" id=""> APE<br>
+        <input type="checkbox" value="POO" name="POO" id=""> POO<br>
+        <input type="checkbox" value="SC" name="SC" id=""> SC<br>
+        <br>
+        Estado<select name="estado" id="">
+                <option value="mg">MG</option>
+                <option selected value="df">DF</option>
+                <option value="mg">SP</option>
+                <option value="go">GO</option>
+
+        </select>
 
 
     </form>
