--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Cadastro</h1>
 
-    <form action="recebeDados.c">
+    <form action="recebeDados.c" method="post">
         nome:<input type="text" name="nome" id=""><br>
         senha:<input type="password" name="senha" id=""><br>
         data:<input type="datetime-local" name="data" id=""><br>
@@ -33,7 +33,15 @@
                 <option value="go">GO</option>
 
         </select>
+        <br>
+        observação <br>
 
+        <textarea name="obs" id="" cols="30" rowls="10"></textarea>
+
+        <input type="button" value="texto">
+        <br>
+        <input type="submit" value="" name="" id="">
+ 
 
     </form>
     
